--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -26,7 +26,7 @@
                      />
 
             <ListBox Grid.Row="1" Grid.ColumnSpan="2"
-                     Items="{Binding Entries}"
+                     Items="{Binding Entries, Mode=OneWay}"
                      VirtualizationMode="Simple"
                      SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
                      BorderThickness="0"
