--- a/src/v00v.Views/Startup/StartupControl.xaml
+++ b/src/v00v.Views/Startup/StartupControl.xaml
@@ -30,25 +30,32 @@
                     <TextBlock Text="Show settings" Margin="12,0,0,0"/>
                 </StackPanel>
 
-                <Grid Grid.Column="1" Grid.Row ="3" RowDefinitions="20,25,2,25,10,25,2,25,2,25,2,25,25,25,4,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
+                <Grid Grid.Column="1" Grid.Row ="3" RowDefinitions="7,25,2,25,2,25,10,25,2,25,2,25,2,25,25,25,4,25" IsVisible="{Binding ShowSettings, Mode=OneWay}">
 
                     <StackPanel Orientation="Horizontal" Grid.Row="1">
-                        <TextBlock Text="Directory:" ToolTip.Tip="To download"/>
-                        <TextBox Width="346" Margin="16,0,0,0" Watermark="Select..." Text="{Binding BaseDir, Mode=TwoWay}" IsReadOnly="True"/>
-                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectFolder"/>
+                        <TextBlock Text="Database folder:" ToolTip.Tip="For db location" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}"/>
+                        <TextBox Width="279" Margin="15,0,0,0" Watermark="Use internal location..." Text="{Binding DbDir, Mode=TwoWay}" IsReadOnly="True" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}" ToolTip.Tip="Restart required"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectDbFolder" IsEnabled="{Binding EnableCustomDb, Mode=OneWay}"/>
+                        <CheckBox Margin="8,0,0,0" IsChecked="{Binding EnableCustomDb, Mode=TwoWay}" ToolTip.Tip="Enable custom db location"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Grid.Row="3">
-                        <TextBlock Text="Player:"/>
-                        <TextBox Width="346" Margin="32,0,0,0" Watermark="Select path to mpc-be..." Text="{Binding WatchApp, Mode=TwoWay}" IsReadOnly="True"/>
-                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="OpenFile"/>
+                        <TextBlock Text="Download folder:" ToolTip.Tip="For downloaded files"/>
+                        <TextBox Width="312" Margin="10,0,0,0" Watermark="Select..." Text="{Binding DownloadDir, Mode=TwoWay}" IsReadOnly="True"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="SelectFolder"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Grid.Row="5">
+                        <TextBlock Text="Media player:"/>
+                        <TextBox Width="312" Margin="30,0,0,0" Watermark="Select path to mpc-be..." Text="{Binding WatchApp, Mode=TwoWay}" IsReadOnly="True"/>
+                        <Button Width="30" Content=">>" Margin="2,0,0,0" Name="OpenFile"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="7">
                         <TextBlock Text="Schedulers:" ToolTip.Tip="Restart required"/>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="7" ToolTip.Tip="Restart required">
+                    <StackPanel Orientation="Horizontal" Grid.Row="9" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,5,0" IsChecked="{Binding EnableRepeatSchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Synchronize every (min):"/>
                         <TextBox Width="40" Margin="7,0,0,0" IsEnabled="{Binding EnableRepeatSchedule, Mode=OneWay}"
@@ -56,7 +63,7 @@
                                  />
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="9" ToolTip.Tip="Restart required">
+                    <StackPanel Orientation="Horizontal" Grid.Row="11" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,5,0" IsChecked="{Binding EnableDailySchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Synchronize at (hh:mm):"/>
                         <ComboBox Margin="8,0,3,0" Width="40" IsEnabled="{Binding EnableDailySchedule, Mode=OneWay}"
@@ -70,7 +77,7 @@
                                   />
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="11" ToolTip.Tip="Restart required">
+                    <StackPanel Orientation="Horizontal" Grid.Row="13" ToolTip.Tip="Restart required">
                         <CheckBox Margin="0,0,8,0" IsChecked="{Binding EnableParserUpdateSchedule, Mode=TwoWay}"/>
                         <TextBlock Text="Update parser (hh:mm):"/>
                         <ComboBox Margin="8,0,3,0" Width="40" IsEnabled="{Binding EnableParserUpdateSchedule, Mode=OneWay}"
@@ -84,13 +91,13 @@
                                   />
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="13">
-                        <TextBlock Text="Download:" ToolTip.Tip="Any link"/>
-                        <controls:ExtendedTextBox Width="346" Margin="10,0,0,0" Watermark="Link..." Text="{Binding DownloadUrl, Mode=TwoWay}"/>
+                    <StackPanel Orientation="Horizontal" Grid.Row="15">
+                        <TextBlock Text="Download file:" ToolTip.Tip="Any url"/>
+                        <controls:ExtendedTextBox Width="312" Margin="25,0,0,0" Watermark="Link..." Text="{Binding DownloadUrl, Mode=TwoWay}"/>
                         <Button Width="30" Content=">>" Margin="2,0,0,0" Command="{Binding DownloadCommand, Mode=OneTime}"/>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Grid.Row="15" IsVisible="{Binding IsYoutubeLink, Mode=OneWay}">
+                    <StackPanel Orientation="Horizontal" Grid.Row="17" IsVisible="{Binding IsYoutubeLink, Mode=OneWay}">
                         <TextBlock Text="Options:"/>
                         <ComboBox Margin="23,0,0,0" Width="90" Items="{Binding Formats, Mode=OneTime}"
                                   SelectedItem="{Binding SelectedFormat, Mode=TwoWay}"
