--- a/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
+++ b/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
@@ -16,7 +16,7 @@
             <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}">
                 <TextBlock Text="Add"/>
             </Button>
-            <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}" CommandParameter="{Binding SelectedTag}">
+            <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}">
                 <TextBlock Text="Save" />
             </Button>
         </Grid>
